--- a/dcc-deepinid-plugin/icons/deepinid.qrc
+++ b/dcc-deepinid-plugin/icons/deepinid.qrc
@@ -6,10 +6,10 @@
         <file>actions/dcc_sync_launcher_32px.svg</file>
         <file>actions/dcc_sync_mail_32px.svg</file>
         <file>actions/dcc_sync_mouse_32px.svg</file>
-        <file>actions/dcc_sync_out_32px.svg</file>
+        <file>texts/dcc_sync_out_32px.svg</file>
         <file>actions/dcc_sync_phone_32px.svg</file>
         <file>actions/dcc_sync_place_32px.svg</file>
-        <file>actions/dcc_sync_Setting_32px.svg</file>
+        <file>texts/dcc_sync_Setting_32px.svg</file>
         <file>actions/dcc_sync_sound_32px.svg</file>
         <file>actions/dcc_sync_supply_32px.svg</file>
         <file>actions/dcc_sync_taskbar_32px.svg</file>
@@ -25,5 +25,9 @@
         <file>themes/dark/cloud.svg</file>
         <file>themes/dark/dark.qss</file>
         <file>themes/dark/syncing.svg</file>
+        <file>actions/dcc_sync_mail_dark_32px.svg</file>
+        <file>actions/dcc_sync_phone_dark_32px.svg</file>
+        <file>actions/dcc_sync_place_dark_32px.svg</file>
+        <file>actions/dcc_sync_wechat_dark_32px.svg</file>
     </qresource>
 </RCC>
